--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2",
-    "video-react": "^0.14.1"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
